--- a/result-app-service.yaml
+++ b/result-app-service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
-kind: Service
+kind: Pod
 metadata:
-  name: result-service
+  name: voting-app-pod
   labels:
-    name: result-service
+    name: voting-app-pod
     app: cpm-voting-app
 spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    name: result-app-pod
-    app: cpm-voting-app
+  containers:
+  - name: voting-app
+    image: dockersamples/examplevotingapp_vote
+    ports:
+         - containerPort: 80
