--- a/result-app-service.yaml
+++ b/result-app-service.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
-kind: Pod
+kind: Service
 metadata:
-  name: voting-app-pod
+  name: result-service
   labels:
-    name: voting-app-pod
+    name: result-service
     app: cpm-voting-app
 spec:
-  containers:
-  - name: voting-app
-    image: dockersamples/examplevotingapp_vote
-    ports:
-         - containerPort: 80
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    name: result-app-pod
+    app: cpm-voting-app
