--- a/voting-app-pods.yaml
+++ b/voting-app-pods.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: voting-app-pod
-  lables:
+  labels:
     name: voting-app-pod
     app: cpm-voting-app
-
 spec:
   containers:
-  -  name:  voting-app
-     image:  dockersamples/examplevotingapp_vote
-     ports: 
-     - containerPort: 80
+  - name: voting-app
+    image: dockersamples/examplevotingapp_vote
+    ports:
+         - containerPort: 80
