--- a/worker-app-pods.yaml
+++ b/worker-app-pods.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: worker-app-pod
-  lables:
+  labels:
     name: worker-app-pod
     app: cpm-voting-app
-
 spec:
   containers:
-  -  name:  worker-app
-     image:  dockersamples/examplevotingapp_worker
+  - name: worker-app
+    image: dockersamples/examplevotingapp_worker
